--- a/content/8-posters/50.md
+++ b/content/8-posters/50.md
@@ -1,14 +1,96 @@
 ---
 label: "50"
 title: "Various Recipes of Wax Resin for Lining Used in Japan and How the Recipe Affects Removal"
-short_title:
+short_title: "Recipes of Wax Resin Used in Japan"
 layout: essay
 order: 500
 contributor:
-  - first_name: Saki
-    last_name: Kunikata
-  - first_name: Takayasu
-    last_name: Kijima
-  - first_name: Masahiko
-    last_name: Tsukada
+  - first_name: "Saki"
+    last_name: "Kunikata"
+    title: "PhD Candidate, Conservation and Restoration"
+    affiliation: "Department of Conservation, Graduate School of Fine Arts, Tokyo University of the Arts"
+  - first_name: "Takayasu"
+    last_name: "Kijima"
+    title: "Emeritus Professor, Conservation and Restoration"
+    affiliation: "Department of Conservation, Graduate School of Fine Arts, Tokyo University of the Arts"
+  - first_name: "Masahiko"
+    last_name: "Tsukada"
+    title: "Professor, Conservation Science"
+    affiliation: "Department of Conservation, Graduate School of Fine Arts, Tokyo University of the Arts"
+keywords:
+abstract: "Wax-resin linings were introduced into Japan at the end of 1960s, and after that they were applied to many oil paintings. However, due to their disadvantages, they fell out of use in Japan around 2000. Now, some linings applied decades ago need further treatments, and we needed to understand their material properties to appropriately conserve them. This research began with compiling the disseminations of wax resin for lining into Japan, which derived the most common recipe used at that time. Based on that, various recipes of wax resin were reconstructed and removal experiments performed. It was revealed that the formulation, amount, and types of resin used in wax resins influenced how the mixtures could be removed. The fact that not all components of wax resin are always removed and, moreover, not uniformly removed, calls for great care in the future treatments of oil paintings lined with wax resin in the past."
 ---
+
+## Introduction
+
+Japanese conservation of oil paintings began to take shape at the end of 1960s, when some Japanese conservators and conservation scientists who had studied the conservation of oil paintings abroad returned to Japan. Wax-resin linings comprised a major part of the techniques they brought into Japan. From then on this lining method was applied frequently in Japan, where the climate is humid year round. However, as the disadvantages—such as darkening and the difficulty of retreatment—gradually became clearer, the use of wax resin for lining declined, eventually falling out of use in Japan around 2000. Since then, information about its use had not been published in detail, and the recipes were often handled much like trade secrets in Japan. Now the linings, which were applied decades ago, are partly detaching from some paintings, which now need further treatments.
+
+This poster sheds light on how Japanese conservators restored oil paintings using wax resin as lining adhesives in the past, focusing on their various recipes through research done with personal interviews and related bibliographic surveys. As the adhesives are reconstructed and the removal experiments performed, we should gain a better understanding of their material properties in order to choose or propose appropriate ways to conserve paintings treated this way in the past.
+
+## Wax-Resin Recipes for Lining Used in Japan
+
+As a first step, interviews about the composition of wax resin and the ways in which it was applied were conducted with some conservators who had treated oil paintings in the 1970s and 1980s in Japan using this method. In particular, the authors interviewed conservators who had been involved with the War Record Paintings Conservation project, which was an enterprise of national importance at that time ([[National Museum of Modern Art, Tokyo 1977]]). These conservators made significant contributions to the establishment of Japanese oil paintings conservation.
+
+[**Fig. 50.1**](fig-50-1) shows various recipes of wax resin, which were obtained through the interviews and the related bibliographic surveys. Wax-resin linings were introduced into Japan via two different routes: from Belgium’s Institut Royal du Patrimoine Artistique (Royal Institute for Cultural Heritage \[KIK-IRPA\]) and from the United States’ New York University (NYU).[^1] Most of the recipes used in Japan originated from Georges Messens’s recipe, used at KIK-IRPA. Tsuneyuki Morita and Mitsuhiko Kuroe studied under Messens ([[Kuroe 1969]]; [[Kuroe 1975]]),[^2] and they brought his recipe and method into Japan in the late 1960s.
+
+Morita and Kuroe said that it was difficult to get gum elemi at that time in Japan, so they had to find a substitute. One chose colophony because that it strengthens the adhesive property and has excellent compatibility with beeswax. The other chose microcrystalline wax—the first synthetic material introduced for wax-resin lining in Japan. It seems that the mainstream wax-resin recipe in Japan then became 7 parts beeswax, 2 or 3 parts dammar resin, and 1 part microcrystalline wax. Most conservators continued to use wax resin for lining over for the following couple of decades, but the modification of the lining adhesive recipe had already been completed in the 1970s. There were few who used ready-made wax resin, although it was available.
+
+## Experimental Removal of Wax-Resin Adhesive
+
+Based on the recipes shown in [**fig. 50.1**](fig-50-1), six formulas of the lining adhesives were prepared for experiments. As the test pieces, 10 cm square pieces of linen canvas faced with Japanese Tengujo paper on one side were prepared. They were impregnated with the recipes shown in [**table 50.1**](table-50-1) from the fabric side and labeled A through F. On the reverse (uncovered) side, a 1 ml drop of mineral spirit was applied the drop covered with blotting paper, and a glass plate and weight were placed on top for 30 seconds. This operation was repeated fifteen times for each piece. After the solvent evaporated completely, the weight loss was measured and the removal amount and rate (percentage) of each sample were compared.
+
+Ten test pieces were prepared for each adhesive (A–F), and half of them were subjected to artificial aging. The heat aging was carried out in the Espec LHU-113 Benchtop Temperature/Humidity Chamber at 55°C and 45% RH for 3 months. This aging condition was used by Gustav Berger in 1972 to test adhesives used in the consolidation of paintings. According to the reference, the heat aging at 55°C could keep the objects below the melting point (and possible critical deterioration point) of resins ([[Berger 1972b]]). The mean value of the removal rate for each recipe was calculated as follows:
+
+$$\frac{\text{sample\ }\text{weight}\text{\ after\ adhesive\ impregnation\ -\ sample\ weight\ after\ adhesive\ removal]]{\text{sample\ weight\ after\ adhesive\ impregnation\ -\ sample\ weigh\ before\ adhesive\ impregnation]]$$
+
+The results are shown in [**fig. 50.2**](fig-50-2).
+
+Before the artificial aging, it was revealed that the larger the amount of resin in the mixture was, the greater the removal rate of wax-resin adhesive would be. In particular, wax resin D, containing colophony, was removed well.
+
+After the artificial aging, the removal rate of wax resin decreased for all the samples except F, which contained no resin. Comparing the samples in terms of the amount of resin, after the aging the removal rate of B, with the doubled dammar resin, became smaller than that of A, whereas the opposite results were obtained before the aging. It was also revealed that it became so difficult to remove C and E, which contain more resins than A; more than 80% of the impregnated wax resin by weight remained on the pieces after removal. As for F, its removal rate didn’t change much after the aging. Accordingly, a rough tendency could be summarized as follows: the greater the amount of resin in the wax-resin adhesive, the greater the removal rate of wax resin would be before the aging. Conversely, the more resin there was in the recipe, the less the removal rate would be after the aging.
+
+For the next step, what was left on the test pieces after removal was investigated by Fourier-transform infrared spectroscopy. The FT-IR spectra of wax-resin residues both before and after the removal were measured by using Bruker Alpha FT-IR spectrometer with attenuated total reflection (ATR) mode. To compare each spectrum, we focused on the range of wave numbers from 1800 to 1600 cm^−1^. Beeswax has its highest peak at about 1736 cm^−1^, and resins have peaks at around 1700 cm^−1^. The spectra of all the components are shown in [**fig. 50.3**](fig-50-3), and the spectra of mixtures (A–E) are shown in [**fig. 50.4**](fig-50-4).
+
+As the spectrum of wax resin A before aging shows, its peak intensity became weaker at about 1735 cm^−1^ and a little stronger at about 1710 cm^−1^ by the removal. This implies that the spectrum gradually gets more similar to that of a resins than that of beeswax. These changes of spectra were common to almost all the mixtures (A–E). These results suggest that beeswax tends to be removed better than resins. The spectra after the aging showed similar changes by the removal as those observed before the aging.
+
+## Discussion of Experimental Results
+
+Through the experiments, it was revealed that the removal rate of wax resin with the method tested varied for each formulation, as well as the amount and kinds of resins, influenced whether the mixtures could be easily removed. The measurement results of FTIR spectra suggested that the proportions of resins in the residual wax resin on test pieces could increase compared to spectra from before the removal operations. We speculate that resins in the mixtures became oxidized by artificial aging, and the oxidized resins made it difficult to remove the entire mixtures so that more remained on the canvases.
+
+It should be noted that the results reported here are achieved under a specific situation—one method of removal with one solvent—but the similar results would be achieved probably using heat for the removal. Melting tests of the Netherlands’ MolArt project (Molecular Aspects of Ageing in Painted Works of Art, 1995–99) showed that only wax was melted out from an aged wax-resin mixture when heating at a certain temperature.[^3] Aged resins need much higher temperatures and cannot be removed without risk to the paintings. We also need to bear in mind that the remaining resins in the canvas, when not accompanied by wax, can make the paintings even more brittle after the removal operations, whether solvents or heat is used for removal.
+
+## Conclusion
+
+The beginning of this poster discussed the introduction of the wax-resin lining method into Japan, and how it was brought from abroad and then expanded throughout the country with small modifications. The most common recipes used at that time were deduced. It is likely the recipe we would encounter most often on treating oil paintings lined with wax resin in Japan.
+
+From there various recipes of wax-resin adhesive were reconstructed, and some comparisons were made to clarify how differently various recipes of wax resin behave on removal. The experimental results demonstrated some trends: which recipes of wax-resin adhesive—and which of their components—tend to remain more on linen canvas.
+
+In Japan, little study has been done to reconsider old linings of canvas paintings, but it is high time that they were well documented and disseminated for present and the future generations. We intend to continue research on this matter and hope it will guide conservators and allied professionals to think about how to treat oil paintings lined with wax resin.
+
+## Source of Materials for Wax Resin
+
+The following materials were either obtained from the same source the interviewees used or are materials currently available Japan, when available:
+
+Dammar resin: Holbein Works Ltd., Japan
+
+Gum elemi: Talas, United States
+
+Colophony: Hayashi Chemical Llc., Japan (marketed as Rosin)
+
+Canada balsam: Showa Chemical Industry Co. Ltd., Japan
+
+Beeswax: Yamada Bee Company, Inc., Japan
+
+Microcrystalline wax: Victory White Wax, Baker Hughes, United States
+
+{% backmatter %}
+
+## Notes
+
+{% endbackmatter %}
+
+[^1]: Masako Koyano, personal communication. Koyano, who studied at NYU’s Institute of Fine Arts, related that people there used the recipe devised by Caroline and Sheldon Keck. The Kecks founded the Conservation Center at the institute, and Sheldon Keck was its director from 1960 to 1965 (Ken Johnson, “Caroline K. Keck, Art Conservator, Dies at 99,” *New York Times,* January 15, 2008).
+
+[^2]: Tsuneyuki Morita, personal interview, January 29, 2018. Mitsuhiko Kuroe’s connection to KIK-IRPA was also referred to this interview.
+
+[^3]: Mireille te Marvelde, email message to author, February 8, 2020.
