--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -1,20 +1,136 @@
 ---
 label: "62"
 title: "Investigating Commercially Primed Contemporary Artist Canvases"
-short_title:
+short_title: "Investigating Commercially Primed Contemporary Artist Canvases"
 layout: essay
 order: 620
 contributor:
-  - first_name: Anne
-    last_name: Carter
-  - first_name: Lynn
-    last_name: Chua
-  - first_name: Filzah Mohd
-    last_name: Amir
-  - first_name: Ruby
-    last_name: Awburn
-  - first_name: Gillian
-    last_name: Osmond
-  - first_name: Joey
-    last_name: Ng
+  - first_name: "Anne"
+    last_name: "Carter"
+    title: "Paintings Conservator"
+    affiliation: "Queensland Art Gallery, Gallery of Modern Art, Brisbane, Australia"
+  - first_name: "Lynn"
+    last_name: "Chua"
+    title: "Conservation Scientist"
+    affiliation: "Heritage Conservation Centre, National Heritage Board, Singapore"
+  - first_name: "Filzah"
+    last_name: "Mohd Amir"
+    title: "Assistant Conservator"
+    affiliation: "Heritage Conservation Centre, National Heritage Board"
+  - first_name: "Ruby"
+    last_name: "Awburn"
+    title: "Independent Conservator"
+    affiliation: "Australia"
+  - first_name: "Gillian"
+    last_name: "Osmond"
+    title: "Paintings Conservator"
+    affiliation: "Queensland Art Gallery, Gallery of Modern Art"
+  - first_name: "Joey"
+    last_name: "Ng"
+    title:
+    affiliation: "National University of Singapore"
+keywords:
+abstract: "Contemporary painters often choose commercially primed canvases as their painting support; however, manufacturers provide little technical information about the materials used in their production. The authors were prompted to learn more about these materials’ manufacture after observing unexpected responses to established conservation treatments. Canvas fiber and priming binder, pigments, and fillers of fifty-three commercially primed canvases purchased from Australian and Singaporean suppliers were analyzed. The materials detected show variations in canvas types and priming formulations that suggest reasons for unusual conservation treatment characteristics."
 ---
+
+## Introduction
+
+Commercially primed artist canvases are common supports for contemporary painters. Such canvases are convenient and often affordable; the product information, however, available for both artists and conservators to inform purchase choice or likely aging characteristics is limited. This paper reports on the material analysis of fifty-three commercially primed artist canvases purchased from Australian and Singaporean suppliers in 2018–2019.
+
+Research was prompted by observations that some contemporary paintings exhibit unusual responses to conservation treatment that are potentially attributable to their commercially primed canvas support. Observations include stretchiness, the priming’s ability to tolerate heat above 45°C (sometimes as high as 80°C), unpredictable response to humidification, priming discoloration, and delamination of subsequently applied oil paint. Commercially primed canvases from seventeen applicable collection paintings dating from 1990 to 2018 were also analyzed; however, those results are presented here only where they help to inform the discussion.
+
+## Background
+
+Historical studies of commercially primed canvases document the frequent use of lead white, chalk, protein, and oil in single- or double priming layers on cotton or linen canvas supports ([[Ravaud et al. 2014]]; [[Hackney 2019]]; [[Townsend et al. 2008]]). Today, these priming layers are commonly substituted with synthetic alternatives, with acrylics being the most commonly encountered. For example, Ormsby et al. studied priming layers of fifty-two paintings from the Tate collection dated 1963–2008 and identified 60% of priming layers as acrylic emulsion, 27% as oil based, and 10% as alkyd, with 3% “other” ([[Ormsby et al. 2008]]). The prevalence of synthetic fiber use in contemporary canvas supports is also a question to be investigated.
+
+To inform canvas sample selection for this current study, thirty-seven Australian and Singaporean painters were surveyed about their canvas choices revealing that most painters routinely purchased commercially primed canvases—selecting their canvas by trial and error, availability, working qualities, and price point ([[Osmond et al. 2018]]). Commercially primed canvases are usually produced as type U: universal (synthetic emulsion), suitable for both water- and oil-based paint; or type O: suitable for oil paint. However, many artists were unaware of the priming type and did not vary their canvas selection according to paint medium.
+
+## Methodology and Results
+
+Fifty-three commercially primed artist canvases were collected from art stores in Australia and Singapore, representing nineteen brands manufactured in Europe, China, Australia, the United States, India, and Mexico: Artfix, Claessens, Belle Arti, Fredrix, Winsor and Newton, Caravaggio, Sydney Canvas Company, Art Spectrum, Clairefontaine, Mont Marte, National Art Materials, Jasart, Overjoyed, Pebeo, Semco, Francheville, Phoenix, Talens, and Colorpro. Samples cover various price points, and forty-nine samples were identified as having synthetic polymer priming and 4 oil-based priming.
+
+Canvas fiber, priming binder, and pigments/fillers were primarily analyzed using optical microscopy, attenuated total reflectance­–Fourier transform infrared spectroscopy (ATR-FTIR), pyrolysis gas chromatography/mass spectrometry (Py-GCMS), X-ray fluorescence spectroscopy (XRF), and some with Raman spectroscopy and scanning electron microscopy–energy-dispersive X-ray spectroscopy (SEM-EDX). In addition, uniaxial tensile strength testing and heat testing were undertaken.
+
+A summary of results is presented below. More detailed analysis for each sample is found as [supplementary data](https://www.qagoma.qld.gov.au/__data/assets/pdf_file/0004/596821/Investigating-commercially-primed-contemporary-artist-canvases-supplementary-data.pdf) [[Carter et al 2020]].
+
+### Priming Stratigraphy
+
+Cross sections were prepared, and four priming layer stratigraphies were identified in visible light. Thirty-two percent of samples contained single priming layers, often with irregular thickness. Others appeared as double layers in three stratigraphies: equal layer thickness with the bottom layer sometimes irregular in thickness and usually opaque (30%); thin layer over thick, with the bottom layer often irregular in thickness (19%); thick layer over thin, with the bottom layer sometimes transparent or opaque and continuous or noncontinuous (19%). The multiple priming layers specified by suppliers were not always discernible.
+
+### Binder
+
+The top surface of priming layers was characterized using ATR-FTIR ([**table 62.1**](table-62-1), [**fig. 62.1**](fig-62-1)) ([[Osmond et al. 2018]]). At this surface layer, forty-nine of the fifty-three canvas samples contained synthetic polymer binders and four samples contained oil priming. Styrenated-acrylic predominated as a binder, followed by acrylic and acrylic–polyvinyl acrylic (PVA) binders. No alkyd binders were found.
+
+Py-GCMS provided further detail of synthetic polymer binder constituents, including verification of the use of seven different acrylic monomers. Within the group of styrenated-acrylics, styrene– n-butyl acrylate (BA) predominated (37%), and within the group of “pure” acrylics, only ethyl acrylate–methyl methacrylate (EA-MMA) and BA-MMA were found, with a slightly higher occurrence of EA-MMA. One EA-MMA priming showed significant amounts of diethylene glycol dibenzoate plasticizer. Within the group of PVA-acrylic binders, some were copolymerized with vinyl versatate (VeoVa). Surfactants such as polyethylene oxide (PEO) ([[Scalarone and Chiantore 2004]]) were not observed with ATR-FTIR.
+
+Priming layer combinations varied ([**fig. 62.2**](fig-62-2)). Double priming layers included acrylic over styrenated acrylic ([**fig. 62.2b**](fig-62-2)), acrylic over acrylic-PVA ([**fig. 62.2d**](fig-62-2)), and oil over styrenated acrylic ([**fig. 62.3**](fig-62-3)).
+
+Variations were observed between ATR-FTIR and Py-GCMS data, including a significantly higher incidence of PVA detected with Py-GCMS. This was found to correlate with the presence of PVA in lower priming layers not captured by the surface-only ATR-FTIR. Thin surface layers were sometimes difficult to separate from other similarly colored layers for Py-GCMS analysis ([**fig. 62.2d**](fig-62-2)) ([[Osmond et al. 2018]]).
+
+In total, thirty-four different copolymer binder combinations in the upper layer were found in the surface layer of the forty-nine synthetic-primed samples—indicating a wide variety of formulations and subsequent properties. The history of synthetic emulsion binders and copolymer properties is well documented, including in conservation literature ([[Scalarone & Chiantore 2004]]; [[Learner 2004]]; [[Croll 2007]]; [[Standevan 2011]]), which describes how copolymers are formulated to provide optimal coating properties. For example, adding monomers that have a higher glass transition temperature (Tg), such as styrene (or MMA), to a “soft” acrylic monomer such as n-butyl acrylate results in a stiffer and possibly more heat tolerant priming, depending on the monomer ratio ([**table 62.2**](table-62-2)).
+
+## Pigments and Fillers
+
+Fourteen different pigment and filler combinations were identified. The most frequent combinations are detailed in [**table 62.1**](table-62-1). Two-thirds of synthetic primings were composed of titanium dioxide and chalk, some also contained talc. Nine percent of samples contained chalk only. Pigmentation of layers also varied within samples; for example, titanium white was sometimes found only in the top of double-layered priming ([**fig. 62.2b**](fig-62-2)).
+
+### Oil Priming and Zinc Soaps
+
+The four oil-primed samples were double primed. Three were oil over acrylic or acrylic-PVA, and one contained two oil layers. Barium sulfate, titanium white, and calcium carbonate were found in oil primings. Additionally, zinc was detected in three of the oil- primed samples, and zinc soaps (amorphous and/or crystalline) were detected at the surface of these samples.
+
+Amorphous zinc carboxylates (broadband centered 1571 cm^−1^) were found at the top surface of the double oil priming where zinc oxide was present only in the underlayer. This suggests in situ formation of zinc soaps and migration from the lower layer to the surface ([**fig. 62.3a**](fig-62-3)).
+
+Crystalline zinc soaps (1538 cm^−1^) were detected at the surface of two oil-primed canvases with acrylic-PVA underlayers. The oil priming contained no zinc oxide, and thus zinc stearate was likely a constituent in the priming formulation ([**fig. 62.3b**](fig-62-3)). These results are important, as zinc soaps at the surface of oil-primed canvases may pose a risk to subsequent oil-paint adhesion ([[Osmond 2019]]).
+
+## Canvas
+
+Fiber analysis showed good correlation with the information provided by manufacturers. Cotton was the most prevalent fiber, followed by linen. Polythene terephthalate (PET) and PET-cotton blends were less common ([**table 62.1**](table-62-1)).
+
+Three weave patterns were identified: plain weave (1 x 1), half basket (2 x 1), and full basket (2 x 2) ([**table 62.1**](table-62-1)). Cotton was typically found as half basket, while linen, PET, and PET-cotton blends were mostly plain weave. Twenty-five percent of cotton samples had a thread count of 10 x 30 threads/cm^2^; otherwise, thread counts varied.
+
+Uniaxial tensile strength testing of canvas samples indicated that the type or number of priming layers did not significantly affect tensile strength. The force at maximum for cotton and cotton-PET (56—258 N) was generally lower than for linen and PET (191—514 N) regardless of priming layers. The modulus of elasticity of the samples varied, generally showing a lower modulus of elasticity in the warp direction than the weft, aligning with research by others ([[Young and Jardine 2012]]).
+
+## Heat tests
+
+Response of the priming layer to heat was tested. Most samples were visually affected after holding a spatula heated to 80°C against the surface for one minute; however, there was no obvious visual effect in 19% of samples—that is, no flattening, burnishing, softening, or tackiness. No obvious correlation was found between heat response and binder or pigmentation type to inform conservation practice.
+
+## Conclusions
+
+The synthetic emulsion primings found in this study reflect commercial development over the past seventy years. However, where industry has broadly transitioned from PVA and PVA-acrylic copolymers to acrylics and styrenated-acrylics ([[Schwartz and Kossmann 1998]]) PVA remains a common constituent in commercially primed artist canvases.
+
+Styrene was found in 64% of priming surface layers—most frequently with acrylic but also combined with PVA. Styrenated acrylics were also found as underlayers for both oil and acrylic layers. The prevalence of styrenated acrylics indicates a trend of increased use since 2008 ([[Ormsby et al. 2008]]).
+
+Styrenated acrylic emulsions are generally used in more economical paints, as styrene monomers are cheaper than acrylics. However, styrenated acrylics can also produce high-end paints, depending on the performance required.[^1] Importantly, styrene is not stable when exposed to ultraviolet radiation ([[Standeven 2011)]]). It can become yellow and may “chalk” and crack if sufficient UV exposure occurs. When covered with another paint layer, styrenated acrylic is considered stable.[^2] Thus, a general recommendation from this research is for artists to avoid leaving commercial priming layers (which may contain styrene) exposed to possible UV degradation.
+
+In regard to oil-primed canvases, surface zinc carboxylates were identified. They present the risk of delamination of subsequently applied oil paint.
+
+Of the fifty-three commercially primed canvases, none showed identical formulations of binder and pigment filler except for some of the same brand. This finding implies that there is no standard formulation for commercially primed canvases, nor necessarily consistency within brands—the same product from different suppliers was not always identical, suggesting inconsistent production. Thus, priming-layer properties are difficult to identify from supplier information.
+
+Cotton canvas predominated, primarily in half-basket weave. Synthetic canvases were not common; however, they showed the greatest tensile strength. Correlations between observations from artwork treatments and those works’ commercially primed canvas type were unclear. However, within the small number of paintings analyzed (seventeen), artworks on half-basket weave cotton canvas with chalk-dominated priming were the main contenders for unusual treatment observations.
+
+## Acknowledgments
+
+The project was carried out as part of the memorandum of understanding between Queensland Art Gallery \| Gallery of Modern Art, Australia, and the Heritage Conservation Centre (National Heritage Board), Singapore. This research is supported by the QAGOMA Foundation and the QAGOMA Centre for Contemporary Art Conservation.
+
+## Experimental Equipment and Conditions
+
+ATR-FTIR: Thermo Scientific Nicolet iN10 microscope with DTGS room-temperature detector coupled to an iZ10 diamond ATR bench accessory; 16 scans over 4000–400 cm^−1^ range, 4 cm^−1^ resolution.
+
+Py-GCMS: Shimadzu GCMS QP2020 combined with a Frontier PY3030D pyrolizer unit with autosampler AOC-20i. Pyrolysis conditions: 600°C for 0.2 minutes. Gas chromatography conditions: 40°C for 5 minutes, ramped to 300°C at 10°C/min., hold 5 minutes. Oil-containing samples were derivatized with 3 µl of 25% tetramethylammonium hydroxide (TMAH) in methanol. Mass spectrometry conditions: Electronic index (EI) mode (70 eV), scan range: 50–600 m/z.
+
+Uniaxial testing: 500N Zwick/Roell with 10 mm sample width and gauge length, and speed of 100 mm/min. at 55 ±5% RH and 22 ±3°C. Samples were tested in warp and weft with a tensile load of 500 N, measuring \[Fmax/N\] and t \[Emod/GPa\].
+
+XRF: Bruker T 5i with Rh excitation anode, silicon drift PIN diode detector, no vacuum, Geo-Exploration mode calibration, spot size 8 mm.
+
+Raman spectroscopy: Renishaw Raman spectroscopy instrument coupled to a confocal microscope. Laser of excitation: 785 nm.
+
+SEM-EDX: Hitachi SU5000 scanning electron microscope coupled to a Bruker EDX system in partial pressure of 50 Pa. Voltage of 20 kV was applied, and EDS mapping of cross sections was collected over five minutes.
+
+{% backmatter %}
+
+## Notes
+
+{% endbackmatter %}
+
+[^1]: Scott Olufson, manager, Coatings Technical Support, Dispersions BASF Australia Ltd, email communication Sept. 17, 2018.
+
+[^2]: Olufson, email.
